Closed Bug 1809132 Opened 2 years ago Closed 2 years ago

Perma bustage /builds/worker/checkouts/gecko/js/src/wasm/WasmBaselineCompile.cpp:3151:7: error: use of undeclared identifier 'branchGcObjectType when Gecko 110 merges to Beta on 2023-01-16

Categories

(Core :: JavaScript: WebAssembly, defect)

defect

Tracking

()

VERIFIED FIXED
110 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox108 --- unaffected
firefox109 --- unaffected
firefox110 + verified

People

(Reporter: smolnar, Assigned: rhunt)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Central as beta simulation

How to run these simulations

Failure log

In file included from Unified_cpp_js_src_wasm0.cpp:29:
[task 2023-01-09T11:11:40.824Z] /builds/worker/checkouts/gecko/js/src/wasm/WasmBaselineCompile.cpp:3151:7: error: use of undeclared identifier 'branchGcObjectType'
[task 2023-01-09T11:11:40.824Z]       branchGcObjectType(object, typeIndex, &notTaken,
[task 2023-01-09T11:11:40.824Z]       ^
[task 2023-01-09T11:11:40.824Z] /builds/worker/checkouts/gecko/js/src/wasm/WasmBaselineCompile.cpp:3163:3: error: use of undeclared identifier 'branchGcObjectType'
[task 2023-01-09T11:11:40.825Z]   branchGcObjectType(object, typeIndex, b->label,
[task 2023-01-09T11:11:40.825Z]   ^
[task 2023-01-09T11:11:40.826Z] 2 errors generated.
[task 2023-01-09T11:11:40.826Z] gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:674: Unified_cpp_js_src_wasm0.o] Error 1
[task 2023-01-09T11:11:40.827Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/js/src/wasm'
[task 2023-01-09T11:11:40.843Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/js/src/wasm'
[task 2023-01-09T11:11:40.844Z] js/src/wasm/Unified_cpp_js_src_wasm1.o
[task 2023-01-09T11:11:40.845Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/js/src/wasm'
[task 2023-01-09T11:11:40.962Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/modules/fdlibm/src'
Flags: needinfo?(rhunt)
Assignee: nobody → rhunt
Status: NEW → ASSIGNED
Pushed by csabou@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/95828a786eac wasm: Fix bustage from missing compile flags. r=yury
Flags: needinfo?(rhunt)
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 110 Branch

Verified fixed in today's central as beta simulation

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: