Bug 1809132 - wasm: Fix bustage from missing compile flags. r=yury

Differential Revision: https://phabricator.services.mozilla.com/D166326